# quSyn

./: CMakeLists.txt  README.md  common.h  function.cpp  function.h  main.cpp  option.cpp  option.h  qsyn.cpp  qsyn.h  qsyn.kdev4  specification.yml
.kdev4/: qsyn.kdev4
Algorithms/: coveredsetpartition.cpp  coveredsetpartition.h
Conductors/: randomconductor.cpp  randomconductor.h
